--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,26 @@
-<div>
-    <mat-slide-toggle>Slide me!</mat-slide-toggle>
+<mat-toolbar color="primary">
+    <button mat-button><i class="fas fa-rocket fa-2x"></i></button>
+    <div class="title">
+        angular startup - material
+    </div>
+
+</mat-toolbar>
+
+<div class="container">
+
+    <div>
+        <mat-slide-toggle>Slide me!</mat-slide-toggle>
+    </div>
+
+
+    <h1>
+        <i class="fab fa-angular"></i>
+    </h1>
+
+
+    <mat-grid-list cols="4" rowHeight="100px">
+        <mat-grid-tile *ngFor="let tile of tiles" [colspan]="tile.cols" [rowspan]="tile.rows" [style.background]="tile.color">
+            {{tile.text}}
+        </mat-grid-tile>
+    </mat-grid-list>
 </div>
-
-
-<h1>
-    <i class="fab fa-angular"></i>
-</h1>
