--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,11 +1,16 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
-
+// @import "~@angular/material/prebuilt-themes/deeppurple-amber.css";
+// @import "~@angular/material/prebuilt-themes/pink-bluegrey.css";
+// @import "~@angular/material/prebuilt-themes/purple-green.css";
 @import url("../node_modules/@fortawesome/fontawesome-free/css/all.css");
 
 body { 
-    min-width: 100vh;
-    min-height: 100vw;
+    font-family: 'Roboto', sans-serif;
     margin: 0;
     padding: 0;
+}
+
+.container{
+    padding: 1rem;    
 }
